--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h2 class="animate__animated animate__pulse animate__infinite">Escuchá Discopatico</h2>
         </div>
         <div class="discopaticoindex">
-            <iframe title="Discopatico en Spotify" style="border-radius:12px" src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0" alt="Link a disco Discopatico en spotify." width="100%" height="400" frameBorder="10" allowfullscreen="100"
+            <iframe title="Discopatico en Spotify" style="border-radius:12px" src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0" alt="Link a disco Discopatico en spotify." width="" height="" frameBorder="10" allowfullscreen="100"
                 allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </main>
