--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -92,8 +92,9 @@
         <div class="discografiacontainergeneral">
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/2OCUCMhcvv7W5rWyrZirAa?si=amXH8D36S665MVq0qdE5Sg" target="_blank">
                     <img src="../assets/1998-velapuerca-deskarado.jpg" alt="Disco de 1998 llamado Deskarado"
-                        class="discografiaitems">
+                        class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Deskarado 1998</p>
@@ -101,8 +102,9 @@
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/6G9Fnn4ilRZBVTWIA0ISy1?si=QBmwYQd8QjuvIhm0MpdkRw" target="_blank">
                     <img src="../assets/2001-velapuerca-de-bichos-y-flores.jpg"
-                        alt="Disco de 2001 llamado De Bichos y Flores" class="discografiaitems">
+                        alt="Disco de 2001 llamado De Bichos y Flores" class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>De Bichos y Flores 2001</p>
@@ -110,17 +112,19 @@
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/2wguD9k4EYiibMXbGE3KrK" target="_blank">
                     <img src="../assets/2004-velapuerca-a-contraluz.jpg" alt="Disco de 2004 llamado A Contraluz"
-                        class="discografiaitems">
+                        class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
-                    <p>A Contralux 2004</p>
+                    <p>A Contraluz 2004</p>
                 </div>
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/1iUFO4NXsxz14ZdDZI31T4" target="_blank">
                     <img src="../assets/2007-velapuerca-el-impulso.jpg" alt="Disco de 2007 llamado El Impulso"
-                        class="discografiaitems">
+                        class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>El Impulso 2007</p>
@@ -128,8 +132,9 @@
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/6QHtEvItOtm3tf9sCQXDG0" target="_blank">
                     <img src="../assets/2011-lavelapuerca-piel-y-hueso.jpg" alt="Disco de 2011 llamado Piel y Hueso"
-                        class="discografiaitems">
+                        class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Piel y Hueso 2011</p>
@@ -137,8 +142,9 @@
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/47GJV0uZ1216RxZTTGS8rV" target="_blank">
                     <img src="../assets/2013-velapuerca-pasaje-salvo.jpg" alt="Disco EP de 2013 llamado Pasaje Salvo"
-                        class="discografiaitems">
+                        class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Pasaje Salvo 2013</p>
@@ -146,8 +152,9 @@
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/4Dq5ueH8qdZRDx5TvdTCpy" target="_blank">
                     <img src="../assets/2014-velapuerca-erase.jpg" alt="Disco de 2014 llamado Erase"
-                        class="discografiaitems">
+                        class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Erase 2014</p>
@@ -155,8 +162,9 @@
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/0RpJ96qNoqzpjvh0xrPdrh" target="_blank">
                     <img src="../assets/2018-velapuerca-destilar.jpg" alt="Disco de 2018 llamado Destilar"
-                        class="discografiaitems">
+                        class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Destilar 2018</p>
@@ -164,8 +172,9 @@
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/0tjbeQCarEUtbhlyyCRp0r" target="_blank">
                     <img src="../assets/2022-velapuerca-discopatico.jpg" alt="Disco de 2022 llamado Discopatico"
-                        class="discografiaitems">
+                        class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Discopatico 2022</p>
@@ -173,8 +182,9 @@
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/4fbF5FVLh0F49BmYNxmDyQ" target="_blank">
                     <img src="../assets/2009-velapuerca-normalmente-anormal-2.jpg"
-                        alt="Primer DVD de la banda del año 2009 llamado Normalmente Anormal" class="discografiaitems">
+                        alt="Primer DVD de la banda del año 2009 llamado Normalmente Anormal" class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Normalmente Anormal 2009</p>
@@ -182,8 +192,9 @@
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/33Ucm2o6JHmzprwKmhjh9P" target="_blank">
                     <img src="../assets/2014-velapuerca-uno-para-todos-3.jpg"
-                        alt="Segundo DVD+2 discos en vivo del año 2014 llamado Uno Para Todos" class="discografiaitems">
+                        alt="Segundo DVD+2 discos en vivo del año 2014 llamado Uno Para Todos" class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Uno para Todos 2014</p>
@@ -191,9 +202,10 @@
             </div>
             <div class="discografiacontainer">
                 <div>
+                    <a href="https://open.spotify.com/album/1ChikOiYIV2jwzPLfeFVSj" target="_blank">
                     <img src="../assets/2017-velapuerca-festejar-para-sobrevivir-3.jpg"
                         alt="Ultimo DVD en vivo publicado del año 2017 llamado Festejar Para Sobrevivir"
-                        class="discografiaitems">
+                        class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Festejar para Sobrevivir 2017</p>
