add modificaciones sobre todo en los mediaqueris

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html"><img src="assets/logo-white.png" width="40px"
-                        alt="Logo de la banda."></a>
+                            alt="Logo de la banda."></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                         aria-label="Toggle navigation">
@@ -101,25 +101,49 @@
             <h2 class="animate__animated animate__pulse animate__infinite">Escuchá Discopatico</h2>
         </div>
         <div class="discopaticoindex">
-            <iframe title="Discopatico en Spotify" style="border-radius:12px" src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0" alt="Link a disco Discopatico en spotify." width="" height="" frameBorder="10" allowfullscreen="100"
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe title="Discopatico en Spotify" style="border-radius:12px"
+                src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0"
+                alt="Link a disco Discopatico en spotify." width="" height="" frameBorder="10" allowfullscreen="100"
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+        </div>
+        <div class="videosmuestra">
+            <div class="videoindex">
+                <video alt="video sobre el tema 'El Viejo' del disco 'De Bichos y Flores'"
+                    src="assets/ElViejoDeBichosyFlores_v720P.mp4" controls></video>
+                <p>El Viejo - De Bichos y Flores</p>
+            </div>
+            <div class="videoindex">
+                <video alt="video sobre el tema 'Zafar' del disco 'A Contraluz'" src="assets/ZafarAContraluz_1080p.mp4"
+                    controls></video>
+                <p>Zafar - A Contraluz</p>
+            </div>
+            <div class="videoindex">
+                <video alt="video del tema Bubujas presentado en el marco del show por los 20 años"
+                    src="assets/BurbujasFestejarParaSobrevivir.mp4" controls></video>
+                <p>Burbujas - Festejar Para Sobrevivir</p>
+            </div>
         </div>
     </main>
 
     <footer class="footer">
         <div class="redes">
-            <span><a title="Instagram" href="https://www.instagram.com/lavela_oficial/" alt="Pagina oficial de Instagram"><i
-                        class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a title="Facebook" href="https://www.facebook.com/LaVelaPuerca.OFICIAL/" alt="Pagina oficial de Facebook"><i
-                        class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a title="Instagram" href="https://www.instagram.com/lavela_oficial/"
+                    alt="Pagina oficial de Instagram"><i class="fa-brands fa-instagram fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a title="Facebook" href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"
+                    alt="Pagina oficial de Facebook"><i class="fa-brands fa-facebook fa-xl"
+                        style="color: #ffffff;"></i></a></span>
             <span><a title="Twitter" href="https://twitter.com/LaVela_Oficial" alt="Pagina oficial de Twitter"><i
                         class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
             <span><a title="TikTok" href="https://www.tiktok.com/@lavelapuercaoficial" alt="Pagina oficial de tiktok"><i
                         class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a title="YouTube" href="https://www.youtube.com/user/velapuercavideos" alt="Pagina oficial de youtube"><i
-                        class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a title="Spotify" href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL" alt="Link cuenta de spotify"><i
-                        class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a title="YouTube" href="https://www.youtube.com/user/velapuercavideos"
+                    alt="Pagina oficial de youtube"><i class="fa-brands fa-youtube fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a title="Spotify" href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"
+                    alt="Link cuenta de spotify"><i class="fa-brands fa-spotify fa-xl"
+                        style="color: #ffffff;"></i></a></span>
         </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
     </footer>
