--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -51,8 +51,8 @@
         <div class="nav">
             <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png"
-                        width="40px" alt="Logo de la banda."></a>
+                    <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"
+                            alt="Logo de la banda."></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                         aria-label="Toggle navigation">
@@ -92,9 +92,10 @@
         <div class="discografiacontainergeneral">
             <div class="discografiacontainer">
                 <div>
-                    <a href="https://open.spotify.com/album/2OCUCMhcvv7W5rWyrZirAa?si=amXH8D36S665MVq0qdE5Sg" target="_blank">
-                    <img src="../assets/1998-velapuerca-deskarado.jpg" alt="Disco de 1998 llamado Deskarado"
-                        class="discografiaitems"></a>
+                    <a href="https://open.spotify.com/album/2OCUCMhcvv7W5rWyrZirAa?si=amXH8D36S665MVq0qdE5Sg"
+                        target="_blank">
+                        <img src="../assets/1998-velapuerca-deskarado.jpg" alt="Disco de 1998 llamado Deskarado"
+                            class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Deskarado 1998</p>
@@ -102,9 +103,10 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <a href="https://open.spotify.com/album/6G9Fnn4ilRZBVTWIA0ISy1?si=QBmwYQd8QjuvIhm0MpdkRw" target="_blank">
-                    <img src="../assets/2001-velapuerca-de-bichos-y-flores.jpg"
-                        alt="Disco de 2001 llamado De Bichos y Flores" class="discografiaitems"></a>
+                    <a href="https://open.spotify.com/album/6G9Fnn4ilRZBVTWIA0ISy1?si=QBmwYQd8QjuvIhm0MpdkRw"
+                        target="_blank">
+                        <img src="../assets/2001-velapuerca-de-bichos-y-flores.jpg"
+                            alt="Disco de 2001 llamado De Bichos y Flores" class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>De Bichos y Flores 2001</p>
@@ -113,8 +115,8 @@
             <div class="discografiacontainer">
                 <div>
                     <a href="https://open.spotify.com/album/2wguD9k4EYiibMXbGE3KrK" target="_blank">
-                    <img src="../assets/2004-velapuerca-a-contraluz.jpg" alt="Disco de 2004 llamado A Contraluz"
-                        class="discografiaitems"></a>
+                        <img src="../assets/2004-velapuerca-a-contraluz.jpg" alt="Disco de 2004 llamado A Contraluz"
+                            class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>A Contraluz 2004</p>
@@ -123,8 +125,8 @@
             <div class="discografiacontainer">
                 <div>
                     <a href="https://open.spotify.com/album/1iUFO4NXsxz14ZdDZI31T4" target="_blank">
-                    <img src="../assets/2007-velapuerca-el-impulso.jpg" alt="Disco de 2007 llamado El Impulso"
-                        class="discografiaitems"></a>
+                        <img src="../assets/2007-velapuerca-el-impulso.jpg" alt="Disco de 2007 llamado El Impulso"
+                            class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>El Impulso 2007</p>
@@ -133,8 +135,8 @@
             <div class="discografiacontainer">
                 <div>
                     <a href="https://open.spotify.com/album/6QHtEvItOtm3tf9sCQXDG0" target="_blank">
-                    <img src="../assets/2011-lavelapuerca-piel-y-hueso.jpg" alt="Disco de 2011 llamado Piel y Hueso"
-                        class="discografiaitems"></a>
+                        <img src="../assets/2011-lavelapuerca-piel-y-hueso.jpg" alt="Disco de 2011 llamado Piel y Hueso"
+                            class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Piel y Hueso 2011</p>
@@ -143,8 +145,8 @@
             <div class="discografiacontainer">
                 <div>
                     <a href="https://open.spotify.com/album/47GJV0uZ1216RxZTTGS8rV" target="_blank">
-                    <img src="../assets/2013-velapuerca-pasaje-salvo.jpg" alt="Disco EP de 2013 llamado Pasaje Salvo"
-                        class="discografiaitems"></a>
+                        <img src="../assets/2013-velapuerca-pasaje-salvo.jpg"
+                            alt="Disco EP de 2013 llamado Pasaje Salvo" class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Pasaje Salvo 2013</p>
@@ -153,8 +155,8 @@
             <div class="discografiacontainer">
                 <div>
                     <a href="https://open.spotify.com/album/4Dq5ueH8qdZRDx5TvdTCpy" target="_blank">
-                    <img src="../assets/2014-velapuerca-erase.jpg" alt="Disco de 2014 llamado Erase"
-                        class="discografiaitems"></a>
+                        <img src="../assets/2014-velapuerca-erase.jpg" alt="Disco de 2014 llamado Erase"
+                            class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Erase 2014</p>
@@ -163,8 +165,8 @@
             <div class="discografiacontainer">
                 <div>
                     <a href="https://open.spotify.com/album/0RpJ96qNoqzpjvh0xrPdrh" target="_blank">
-                    <img src="../assets/2018-velapuerca-destilar.jpg" alt="Disco de 2018 llamado Destilar"
-                        class="discografiaitems"></a>
+                        <img src="../assets/2018-velapuerca-destilar.jpg" alt="Disco de 2018 llamado Destilar"
+                            class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Destilar 2018</p>
@@ -173,8 +175,8 @@
             <div class="discografiacontainer">
                 <div>
                     <a href="https://open.spotify.com/album/0tjbeQCarEUtbhlyyCRp0r" target="_blank">
-                    <img src="../assets/2022-velapuerca-discopatico.jpg" alt="Disco de 2022 llamado Discopatico"
-                        class="discografiaitems"></a>
+                        <img src="../assets/2022-velapuerca-discopatico.jpg" alt="Disco de 2022 llamado Discopatico"
+                            class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Discopatico 2022</p>
@@ -183,8 +185,9 @@
             <div class="discografiacontainer">
                 <div>
                     <a href="https://open.spotify.com/album/4fbF5FVLh0F49BmYNxmDyQ" target="_blank">
-                    <img src="../assets/2009-velapuerca-normalmente-anormal-2.jpg"
-                        alt="Primer DVD de la banda del año 2009 llamado Normalmente Anormal" class="discografiaitems"></a>
+                        <img src="../assets/2009-velapuerca-normalmente-anormal-2.jpg"
+                            alt="Primer DVD de la banda del año 2009 llamado Normalmente Anormal"
+                            class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Normalmente Anormal 2009</p>
@@ -193,8 +196,9 @@
             <div class="discografiacontainer">
                 <div>
                     <a href="https://open.spotify.com/album/33Ucm2o6JHmzprwKmhjh9P" target="_blank">
-                    <img src="../assets/2014-velapuerca-uno-para-todos-3.jpg"
-                        alt="Segundo DVD+2 discos en vivo del año 2014 llamado Uno Para Todos" class="discografiaitems"></a>
+                        <img src="../assets/2014-velapuerca-uno-para-todos-3.jpg"
+                            alt="Segundo DVD+2 discos en vivo del año 2014 llamado Uno Para Todos"
+                            class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Uno para Todos 2014</p>
@@ -203,9 +207,9 @@
             <div class="discografiacontainer">
                 <div>
                     <a href="https://open.spotify.com/album/1ChikOiYIV2jwzPLfeFVSj" target="_blank">
-                    <img src="../assets/2017-velapuerca-festejar-para-sobrevivir-3.jpg"
-                        alt="Ultimo DVD en vivo publicado del año 2017 llamado Festejar Para Sobrevivir"
-                        class="discografiaitems"></a>
+                        <img src="../assets/2017-velapuerca-festejar-para-sobrevivir-3.jpg"
+                            alt="Ultimo DVD en vivo publicado del año 2017 llamado Festejar Para Sobrevivir"
+                            class="discografiaitems"></a>
                 </div>
                 <div class="parrafos">
                     <p>Festejar para Sobrevivir 2017</p>
@@ -215,18 +219,22 @@
     </main>
     <footer class="footer">
         <div class="redes">
-            <span><a title="Instagram" href="https://www.instagram.com/lavela_oficial/" alt="Pagina oficial de Instagram"><i
-                        class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a title="Facebook" href="https://www.facebook.com/LaVelaPuerca.OFICIAL/" alt="Pagina oficial de Facebook"><i
-                        class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a title="Instagram" href="https://www.instagram.com/lavela_oficial/"
+                    alt="Pagina oficial de Instagram"><i class="fa-brands fa-instagram fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a title="Facebook" href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"
+                    alt="Pagina oficial de Facebook"><i class="fa-brands fa-facebook fa-xl"
+                        style="color: #ffffff;"></i></a></span>
             <span><a title="Twitter" href="https://twitter.com/LaVela_Oficial" alt="Pagina oficial de Twitter"><i
                         class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
             <span><a title="TikTok" href="https://www.tiktok.com/@lavelapuercaoficial" alt="Pagina oficial de tiktok"><i
                         class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a title="YouTube" href="https://www.youtube.com/user/velapuercavideos" alt="Pagina oficial de youtube"><i
-                        class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a title="Spotify" href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL" alt="Link cuenta de spotify"><i
-                        class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a title="YouTube" href="https://www.youtube.com/user/velapuercavideos"
+                    alt="Pagina oficial de youtube"><i class="fa-brands fa-youtube fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a title="Spotify" href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"
+                    alt="Link cuenta de spotify"><i class="fa-brands fa-spotify fa-xl"
+                        style="color: #ffffff;"></i></a></span>
         </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
     </footer>
