--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -51,7 +51,7 @@
       <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"
-            alt="Logo de la banda."></a>
+              alt="Logo de la banda."></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
             aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -85,18 +85,18 @@
     </div>
   </header>
   <main class="maincarrusel">
-    <div id="carouselExampleCaptions" class="carousel slide">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-          aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
-          aria-label="Slide 0"></button>
+          aria-current="true" aria-label="Slide 1" data-bs-interval="800"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"
+          data-bs-interval="800"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"
+          data-bs-interval="800"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"
+          data-bs-interval="800"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 0"
+          data-bs-interval="800"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -158,18 +158,19 @@
   <footer class="footer">
     <div class="redes">
       <span><a title="Instagram" href="https://www.instagram.com/lavela_oficial/" alt="Pagina oficial de Instagram"><i
-                  class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
-      <span><a title="Facebook" href="https://www.facebook.com/LaVelaPuerca.OFICIAL/" alt="Pagina oficial de Facebook"><i
-                  class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></a></span>
+            class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
+      <span><a title="Facebook" href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"
+          alt="Pagina oficial de Facebook"><i class="fa-brands fa-facebook fa-xl"
+            style="color: #ffffff;"></i></a></span>
       <span><a title="Twitter" href="https://twitter.com/LaVela_Oficial" alt="Pagina oficial de Twitter"><i
-                  class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
+            class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
       <span><a title="TikTok" href="https://www.tiktok.com/@lavelapuercaoficial" alt="Pagina oficial de tiktok"><i
-                  class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
+            class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
       <span><a title="YouTube" href="https://www.youtube.com/user/velapuercavideos" alt="Pagina oficial de youtube"><i
-                  class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
-      <span><a title="Spotify" href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL" alt="Link cuenta de spotify"><i
-                  class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
-  </div>
+            class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
+      <span><a title="Spotify" href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"
+          alt="Link cuenta de spotify"><i class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
+    </div>
     <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
   </footer>
   <!--script bootstrap-->
