--- a/pages/shows.html
+++ b/pages/shows.html
@@ -51,8 +51,8 @@
         <div class="nav">
             <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png"
-                        width="40px" alt="Logo de la banda."></a>
+                    <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"
+                            alt="Logo de la banda."></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                         aria-label="Toggle navigation">
@@ -124,18 +124,22 @@
     </main>
     <footer class="footer">
         <div class="redes">
-            <span><a title="Instagram" href="https://www.instagram.com/lavela_oficial/" alt="Pagina oficial de Instagram"><i
-                        class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a title="Facebook" href="https://www.facebook.com/LaVelaPuerca.OFICIAL/" alt="Pagina oficial de Facebook"><i
-                        class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a title="Instagram" href="https://www.instagram.com/lavela_oficial/"
+                    alt="Pagina oficial de Instagram"><i class="fa-brands fa-instagram fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a title="Facebook" href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"
+                    alt="Pagina oficial de Facebook"><i class="fa-brands fa-facebook fa-xl"
+                        style="color: #ffffff;"></i></a></span>
             <span><a title="Twitter" href="https://twitter.com/LaVela_Oficial" alt="Pagina oficial de Twitter"><i
                         class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
             <span><a title="TikTok" href="https://www.tiktok.com/@lavelapuercaoficial" alt="Pagina oficial de tiktok"><i
                         class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a title="YouTube" href="https://www.youtube.com/user/velapuercavideos" alt="Pagina oficial de youtube"><i
-                        class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a title="Spotify" href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL" alt="Link cuenta de spotify"><i
-                        class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a title="YouTube" href="https://www.youtube.com/user/velapuercavideos"
+                    alt="Pagina oficial de youtube"><i class="fa-brands fa-youtube fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a title="Spotify" href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"
+                    alt="Link cuenta de spotify"><i class="fa-brands fa-spotify fa-xl"
+                        style="color: #ffffff;"></i></a></span>
         </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
     </footer>
