add ultimos retoques

--- a/index.html
+++ b/index.html
@@ -109,18 +109,15 @@
         </div>
         <div class="videosmuestra">
             <div class="videoindex">
-                <video alt="video sobre el tema 'El Viejo' del disco 'De Bichos y Flores'"
-                    src="assets/ElViejoDeBichosyFlores_v720P.mp4" controls></video>
+                <iframe alt="video sobre el tema 'El Viejo' del disco 'De Bichos y Flores'" allow="autoplay;" allowfullscreen style="border:none" src="https://clipchamp.com/watch/hjO00TKsEMl/embed" width="" height=""></iframe>
                 <p>El Viejo - De Bichos y Flores</p>
             </div>
             <div class="videoindex">
-                <video alt="video sobre el tema 'Zafar' del disco 'A Contraluz'" src="assets/ZafarAContraluz_1080p.mp4"
-                    controls></video>
+                <iframe alt="video sobre el tema 'Zafar' del disco 'A Contraluz'" allow="autoplay;" allowfullscreen style="border:none" src="https://clipchamp.com/watch/7bQwqsKv5vG/embed" width="" height=""></iframe>
                 <p>Zafar - A Contraluz</p>
             </div>
             <div class="videoindex">
-                <video alt="video del tema Bubujas presentado en el marco del show por los 20 años"
-                    src="assets/BurbujasFestejarParaSobrevivir.mp4" controls></video>
+                <iframe alt="video del tema Bubujas presentado en el marco del show por los 20 años" allow="autoplay;" allowfullscreen style="border:none" src="https://clipchamp.com/watch/MqMpQoCGE85/embed" width="" height=""></iframe>
                 <p>Burbujas - Festejar Para Sobrevivir</p>
             </div>
         </div>
