--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -123,23 +123,17 @@
           </div>
         </div>
         <div class="carousel-item">
-          <iframe class="d-block w-100" alt="Video 1" width="100%" height="700"
-            src="https://www.youtube.com/embed/wjhxTWdqZVQ" title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+          <iframe video controls autoplay muted class="d-block w-100" alt="Video publicado en el año 2022 interpretado en colaboracion con Andrea Echeverri de la banda Aterciopelados" iframe allow="autoplay;" allowfullscreen style="border:none" src="https://clipchamp.com/watch/9F1J3XAJulV/embed" width="" height="" controls autoplay muted></iframe>
           <div class="carousel-caption d-none d-md-block">
-            <h5>Video</h5>
-            <p>Muestra.</p>
+            <h5>Tormenta - 2022</h5>
+            <p>Colaboracion con Andrea Echeverri de la banda Aterciopelados.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <iframe class="d-block w-100" alt="Video 2" width="100%" height="700"
-            src="https://www.youtube.com/embed/OspIA4akQeI" title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+          <iframe controls autoplay muted class="d-block w-100" alt="Video publicado en el año 2022 interpretado junto con el cantante de Arquero" allow="autoplay;" allowfullscreen style="border:none" src="https://clipchamp.com/watch/LJ6HB0W4u3B/embed" width="" height=""></iframe>
           <div class="carousel-caption d-none d-md-block">
-            <h5>Video 2</h5>
-            <p>Muestra 2</p>
+            <h5>La Pastilla - 2022</h5>
+            <p>Esta colaboración fue realizada junto al cantante Arquero.</p>
           </div>
         </div>
       </div>
